application/frontend/kubernetes/client/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microtodo-frontend
spec:
  selector:
    app: microtodo-frontend
  ports:
  - port: 80
    targetPort: 80
